# SimpleClientServer_gRPC

./: CMakeLists.txt
client/src/: main.cpp
proto/: CMakeLists.txt
proto/myproto/: error.proto  print.proto
server/: .gitignore
server/src/: main.cpp
